<resources>
    <string name="app_name">Saptsur Music Company </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>

    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="addUnit">ca-app-pub-7233052509464359/9946060443</string>













    <string name="action_settings">Settings</string>
    <string name="contactus1"><b> GRDP InfoTech, Pune </b></string>


    <string name="welcommsg">Welcome to \n Saptsur Music Company </string>
    <string name="tagline">
        Better known by this stage name Saptasur Music Company <b>[Mangesh More (Executive Director and Producer)]</b> is an Indian (Maharashtra) Music production Company based in Mumbai and Pune.

        \n\nKnown for his signature blend of Marathi, Hindi, Saptasur remixes and other various popular songs.  Songs <i>‘Katta Kirrr’</i> <b>(Adarsh Shinde)</b>, Sonyachi Jejuri (Pravin Kadam), Morya Tujhya Namacha Gajar (Aanandi Joshi and Adarsh Shinde) are breakdown the record of youtube and various social media platform in Marathi film industry.

\n\nSaptsur Music is one of the Indian most popular and success music production company in music production industry from 2012.

\n\nIt continuing launch various brand popular song of Saptasur Music.

\n\nSaptsur Music Company launches song produced by Mangesh More  and collaborated with artist such as Adarsh Shinde, Pravin Kadam, Aanandi Joshi (Singer), Ashish More (Music), Shafi Khatib, Amitabh Arya ( Lyrics),  Megha Ghadge, Subhodh and Jitu (Choreography).
    </string>


    <string name="abouttext"> Yave Shama Evangelical Church is a multi-lingual full-gospel Assembly of God (AG) Church in Pune City.
        Our Vision and Mission is to bring the unreached to Jesus Christ through evangelism, lead them to worship the Almighty God, make them true disciples of Christ with due fellowship with the body of Christ, and cater to the needs of the society through humanitarian services.

View Worship Schedule


    </string>


    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="about_us">About us</string>
    <string name="music">Music</string>
    <string name="video">Video</string>
    <string name="gallery">Gallery</string>
    <string name="contact">Contact</string>
    <string name="keymesg">Mangesh More is a Directror and Producer of Saptsur Music Conmpany.
        \n\nThey got verius award for his recognition in the music industry.
        \n\nHis one of the femous music and video songs, Kaata kirr break all the record of Maharashtriyan music.
        For the success, he is the main pillar of Saptsur Music Company.
       \n\nHe is trying his best for music indurstry and music lovers.</string>
    <string name="executive_director_and_producer">( Managing Director  )</string>
    <string name="mr_mangesh_more">Mr.Mangesh More</string>
    <string name="email">saptsurmusic77@gmail.com</string>
    <string name="address">Shop No.G- 201, First Floor, Mega Center, Hadapsar, Pune- 411028</string>
    <string name="website">www.saptsurmusic.com</string>
    <string name="phone">020 26890434</string>
    <string name="name">Saptsur Music Company</string>


</resources>
