<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#1b1b1b"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <ScrollView
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:background="@drawable/bag18"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >


            <Button
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColor="#c19b3b"
                android:textSize="22sp"
                android:textStyle="bold"
                android:text="Contact Details"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/setting_LineColor"> </View>


            <LinearLayout

                android:id="@+id/name"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="10dp"
                android:clickable="true"
                android:background="@drawable/textview_effect">

                <ImageView
                    android:id="@+id/img1"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/build"
                    android:tint="#00000000"
                    android:layout_gravity="left|center"/>


                <RelativeLayout
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="left|center">

                    <TextView
                        android:id="@+id/name22"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_marginLeft="10dp"
                        android:textColor="#ffffff"/>

                </RelativeLayout>

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/setting_LineColor"> </View>




            <LinearLayout
                android:id="@+id/mapaddress"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:padding="10dp"
                android:clickable="true"
                android:onClick="mapcontact"
                android:background="@drawable/textview_effect">

                <ImageView
                    android:id="@+id/img2"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/add"
                    android:tint="#00000000"
                    android:layout_gravity="left|center"/>

                <RelativeLayout
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="left|center">
                    <TextView
                        android:id="@+id/mapaddres"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/address"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_marginLeft="10dp"
                        android:textColor="#ffff"/>

                </RelativeLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/setting_LineColor"> </View>

            <LinearLayout
                android:id="@+id/email"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="10dp"
                android:clickable="true"
                android:onClick="mailcontact"
                android:background="@drawable/textview_effect">

                <ImageView
                    android:id="@+id/img3"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/mail"
                    android:tint="#00000000"
                    android:layout_gravity="left|center"/>

                <RelativeLayout
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="left|center">
                    <TextView
                        android:id="@+id/email1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_marginLeft="10dp"
                        android:textColor="#ffff"/>

                </RelativeLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/setting_LineColor"> </View>


            <LinearLayout
                android:id="@+id/website"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="10dp"
                android:clickable="true"
                android:onClick="webcontact"
                android:background="@drawable/textview_effect">

                <ImageView
                    android:id="@+id/im"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/web"
                    android:tint="#00000000"
                    android:layout_gravity="left|center"/>

                <RelativeLayout
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="left|center">

                    <TextView
                        android:id="@+id/t"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/website"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_marginLeft="10dp"
                        android:textColor="#ffff"/>

                </RelativeLayout>

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/setting_LineColor"> </View>






            <LinearLayout
                android:id="@+id/stdcall"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="10dp"
                android:clickable="true"
                android:onClick="phonecontact"
                android:background="@drawable/textview_effect">
                <ImageView
                    android:id="@+id/img4"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/phone"
                    android:tint="#00000000"
                    android:layout_gravity="left|center"/>

                <RelativeLayout
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="left|center">
                    <TextView
                        android:id="@+id/text4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phone"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_marginLeft="10dp"
                        android:textColor="#ffff"/>

                </RelativeLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/setting_LineColor"> </View>



            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/setting_LineColor"> </View>


        </LinearLayout>
    </ScrollView>
</LinearLayout>